adding ccors, urlencoded, and headers auth

--- a/api/views/home.ejs
+++ b/api/views/home.ejs
@@ -7,7 +7,7 @@
     <br>
     <br>
     <div class='header'>
-    <h2> So... what are you thinking about? <img src='/styles/logo.png' class='logo'></h2>
+    <h2> So... what are you thinking about? <img src='../styles/logo.png' class='logo'></h2>
     <form method='post' action='/home'>
     <input type='text' name='content' placeholder='What is going on?' required/> <br>
     <input type='submit' value='tweet' class='button'/> 
