--- a/api/views/index.ejs
+++ b/api/views/index.ejs
@@ -3,7 +3,7 @@
 <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<img src='/styles/logo.png'> 
+<img src='../styles/logo.png'> 
 <h1 id='welcome'>
     What is happening now. Join Twitter today.</h1>
 <a href='/register'><button>Sing up</button></a> <br>
