--- a/api/views/register.ejs
+++ b/api/views/register.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link href="./styles/style.css" rel="stylesheet" type="text/css">
+<link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <a href='/' class='href'>Cancel</a> <br>
